style: :lipstick: Add margin to prevent footer overlap
Added bottom margin to the affected section to prevent it from being covered by the footer. This adjustment ensures a visually pleasing layout and improves readability.

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,7 @@ body{
     background: var(--color-1);
     border-radius: 40px 40px 0 0;
     padding: var(--space-layout-padding-main-down);
+    margin-bottom: 80px;
 }
 .main__down h2{
     font-size: 22px;
